clmpkg/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Partner Content Acquisition</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Development %2F Onboarding</fullName>
        </values>
        <values>
            <fullName>Dropped</fullName>
        </values>
        <values>
            <fullName>Outreach</fullName>
        </values>
        <values>
            <fullName>Partnered</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCV_of_YouTube_Live__c</fullName>
        <label>CCV of YouTube Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>TEXT(ContractRequest__r.ContractType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>BD_Content_Generic</fullName>
        <active>true</active>
        <businessProcess>Business Development</businessProcess>
        <label>BD Content - Generic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Co_branding_Marketing</fullName>
        <active>true</active>
        <businessProcess>Twitch Sales Process</businessProcess>
        <label>Co-branding Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commerce</fullName>
        <active>true</active>
        <businessProcess>Business Development-Commerce</businessProcess>
        <label>Commerce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution</fullName>
        <active>true</active>
        <businessProcess>Business Development-Distribution</businessProcess>
        <label>Distribution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drops</fullName>
        <active>true</active>
        <businessProcess>Business Development-Drops</businessProcess>
        <label>Drops</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ecosystem</fullName>
        <active>true</active>
        <businessProcess>Twitch Sales Process</businessProcess>
        <label>Ecosystem</label>
    </recordTypes>
    <recordTypes>
        <fullName>EsportsLicenseDeveloperPartnership</fullName>
        <active>true</active>
        <businessProcess>Business Development</businessProcess>
        <label>Esports - License / Developer Partnership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extensions</fullName>
        <active>true</active>
        <businessProcess>Business Development-Extensions</businessProcess>
        <label>Extensions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Game_Integration</fullName>
        <active>true</active>
        <businessProcess>Twitch Sales Process</businessProcess>
        <label>Game Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mod</fullName>
        <active>true</active>
        <businessProcess>Twitch Sales Process</businessProcess>
        <label>Mod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Content_Acquisition</fullName>
        <active>true</active>
        <businessProcess>Partner Content Acquisition</businessProcess>
        <label>Content Acquisition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premium_Partner_Content_Acquisition</fullName>
        <active>true</active>
        <businessProcess>Premium Partner Content Acquisition</businessProcess>
        <label>Incentive / Sponsorship - Content Acquisition</label>
    </recordTypes>
</CustomObject>